Fixed UI bugs
Fixed the svg icons where it is not centered.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -490,16 +490,3 @@ body {
 		}
 	}
 }
-
-.person-svg {
-	// #HEAD {
-	// 	transform: translateX(10%);
-	// }
-	// #NECK {
-	// 	transform: translateX(10%);
-	// }
-
-	#HOOD {
-		// transform: translateX(-10%);
-	}
-}
